# TauriClassroom

./: README.md  angular.json  package-lock.json  package.json
src/: index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: dao.rs  db_instance.rs  db_models.rs  dto.rs  lib.rs  main.rs  tauri_commands.rs
src-tauri/src/dao/: courses_dao.rs  subjects_dao.rs  users_dao.rs
src-tauri/src/db_models/: assignment_model.rs  class_model.rs  comment_model.rs  course_model.rs  file_model.rs  grade_system.rs  info_model.rs  material_model.rs  message_model.rs  news_model.rs  post_model.rs  subject_model.rs  upload_model.rs  upload_restrictions.rs  user_model.rs
src-tauri/src/dto/: subjects_dto.rs
src-tauri/src/tauri_commands/: course_commands.rs  subject_commands.rs  user_commands.rs
src/app/: app.component.css  app.component.html  app.component.ts  app.config.ts  app.module.ts  app.routes.ts  course-page-posts.service.ts  courses.service.ts  date-formatting.ts  shared-variables.service.spec.ts  shared-variables.service.ts
src/app/admin-table/: admin-table.component.css  admin-table.component.html  admin-table.component.spec.ts  admin-table.component.ts
src/app/course-details/: course-details.component.css  course-details.component.html  course-details.component.ts
src/app/course-page/: course-page.component.css  course-page.component.html  course-page.component.spec.ts  course-page.component.ts  course-page.states.ts  course-post.model.ts
src/app/courses-sidebar/: courses-sidebar.component.css  courses-sidebar.component.html  (+2 more)
(+72 files in other folders)
